--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.timeline": "1.7.1",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.7.8",
+    "xyz.candycoded.hapticfeedback": "file:C:/Users/Armoury/Downloads/HapticFeedback-main/HapticFeedback-main/Assets/Plugins/CandyCoded.HapticFeedback",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
